# clare

./: .gitignore  Dockerfile  Makefile  README.md  clare.code-workspace  entrypoint.sh  led_mask_gen.xlsm
brain/: Dockerfile  Makefile  app.py  bootstrap.sh  entrypoint.sh
brain/client/: .env  README.md  package-lock.json  package.json
brain/client/src/: App.vue
brain/rpi_boot_config/: config.txt
brain/server/: Makefile  app.py
brain/server/clare/: head.py  middle.py  state.py  tracks.py  voice.py
eagle/body-middle/: body-middle.b#1  body-middle.b#2  body-middle.b#3  body-middle.b#4  body-middle.b#5  body-middle.b#6  body-middle.b#7  body-middle.b#8  body-middle.b#9  body-middle.brd  body-middle.pro  body-middle.s#1  body-middle.s#2  body-middle.s#3  body-middle.s#4  body-middle.s#5  body-middle.s#6  body-middle.s#7  body-middle.s#8  body-middle.s#9  body-middle.sch  eagle.epf  untitled.s##
eagle/clare-head/: clare-head.b#1  clare-head.b#2  clare-head.b#3  clare-head.b#4  clare-head.b#5  clare-head.b#6  clare-head.b#7  clare-head.b#8  clare-head.b#9  clare-head.brd  clare-head.pro  clare-head.s#1  clare-head.s#2  clare-head.s#3  clare-head.s#4  clare-head.s#5  clare-head.s#6  clare-head.s#7  clare-head.s#8  clare-head.s#9  clare-head.sch  eagle.epf
eyes/include/: utils.h
head/camera/: CMakeLists.txt  package.xml
head/camera/msg/: SemanticFrame.msg
head/camera/src/: face_detect.py
head/eyes/src/: face_test.cpp
head/launch/: clare.launch
head/src/clare_arms/: CMakeLists.txt  package.xml
head/src/clare_env/: CMakeLists.txt  package.xml
head/src/clare_fan/: package.xml
head/src/clare_fan/msg/: FanControl.msg
head/src/clare_fan/nodes/: fan_node.py
head/src/clare_head_camera/: CMakeLists.txt  package.xml
head/src/clare_ir/: CMakeLists.txt  package.xml
head/src/clare_lightring/: package.xml
head/src/clare_middle/: CMakeLists.txt  Makefile  platformio.ini
head/src/clare_tracks/: CMakeLists.txt  package.xml
head/src/clare_tracks/include/: config.h
head/src/clare_tracks/lib/state/: state.cpp  state.h
head/src/clare_tracks/msg/: JoystickInput.msg  MotorSpeeds.msg
head/src/clare_tracks/src/: main.cpp
include/: face.h
interface/client/: .env  package-lock.json  package.json
interface/client/public/: index.html
interface/client/src/: App.vue  main.js
interface/server/: README.md  app.py  requirements.txt
interface/server/clare/: state.py  utils.py
ros/launch/: clare.launch
ros/src/clare_arms/: CMakeLists.txt  package.xml
ros/src/clare_buttons/: CMakeLists.txt  package.xml
ros/src/clare_common/: CMakeLists.txt  package.xml  setup.py
ros/src/clare_common/src/clare_common/: utils.py
ros/src/clare_controller/: CMakeLists.txt  package.xml  setup.py
ros/src/clare_env/: CMakeLists.txt
ros/src/clare_fan/: CMakeLists.txt
ros/src/clare_head/: CMakeLists.txt  Makefile  led_mask_gen.xlsm  package.xml  platformio.ini
ros/src/clare_head/include/: utils.h
ros/src/clare_head/lib/face/: expcode.py  face.cpp  face.h  facemasks.h  ledmasks.h
ros/src/clare_head/lib/sensors/: clareevo.cpp  clareevo.h  clarempu.h
ros/src/clare_head/lib/utils/: utils.cpp  utils.h
ros/src/clare_head/msg/: EarsMessage.msg  EvoMessage.msg  ExpressionList.msg  FaceMessage.msg  IRMessage.msg  NoseMessage.msg
ros/src/clare_head/src/: main-teensy.cpp  main-xiao.cpp  main.cpp
ros/src/clare_head/srv/: ListExpressions.srv
ros/src/clare_head_camera/: CMakeLists.txt  setup.py
ros/src/clare_head_camera/nodes/: face_detect_node.py
ros/src/clare_imgview/: CMakeLists.txt  package.xml  setup.py
ros/src/clare_lightring/: CMakeLists.txt
ros/src/clare_middle/: Makefile  package.xml
ros/src/clare_neck/: CMakeLists.txt  package.xml
ros/src/clare_neck/msg/: NeckMovement.msg
ros/src/clare_neck/nodes/: neck_node.py
ros/src/clare_tracks/: CMakeLists.txt  Makefile  platformio.ini
ros/src/clare_tts/: CMakeLists.txt  package.xml
scripts/: bootstrap.txt  findusbdev.sh  gui-docker  listgroups.sh
src/: clare.ino  face.cpp
tracks/: Makefile  platformio.ini
tracks/include/: config.h  utils.h
tracks/lib/state/: state.h  (+1 more)
tracks/src/: main.cpp
ultrasound/: platformio.ini
ultrasound/src/: clare_middle_node.py  main.cpp
(+38 files in other folders)
