<?xml version="1.0"?>
<package format="2">
  <name>clare_fan</name>
  <version>0.0.0</version>
  <description>The clare_fan package</description>

  <maintainer email="dgorissen@gmail.com">Dirk Gorissen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
