<?xml version="1.0"?>
<package format="2">
  <name>clare_common</name>
  <version>0.0.1</version>
  <description>The clare_common package</description>
  <maintainer email="dgorissen@gmail.com">Dirk Gorissen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
