<?xml version="1.0"?>
<package format="2">
  <name>clare_neck</name>
  <version>0.0.0</version>
  <description>The clare_neck package</description>

  <maintainer email="dgorissen@gmail.com">Dirk Gorissen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>clare_common</exec_depend>

  <export>
  </export>
</package>
